@@ -1,3 +1,8 @@
+2008-04-29  Evan Monroig  <evan.monroig@gmail.com>
+
+	* experimental/multiplication.lisp: moved here from
+	multiplication.lisp
+
 2008-04-28  Evan Monroig  <evan.monroig@gmail.com>
 
 	* fnv-matrix.lisp (setf mref): add method for basic matrix types
